Fix dialogs with large icons having misaligned titles.

When I wrote crrev.com/2907983002 I accidentally changed the title
height to be the same as the icon height if the icon height is larger,
but kept the code that positioned it assuming it was smaller. This patch
reverts the title height to be the preferred height.

Bug: 740487
Change-Id: Ie356dfa717436a20884b8805d0400f40c68b4ae3